--- a/src/components/RequestsBox/RequestsBox.module.css
+++ b/src/components/RequestsBox/RequestsBox.module.css
@@ -1,5 +1,5 @@
 .tagsContent1 {
-    display: flex;
+    display: inline;
 }
 
 .tagsContent1 {
@@ -7,13 +7,8 @@
 }
 
 .box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex: 1;
     margin-top: 10%;
     margin-left: 20%;
     width: 60%;
     height: 680px;
-    background: #2465C7;
 }
