--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -12,7 +12,7 @@
    position: absolute;
    width: 373px;
    height: 48px;
-   left: 534px;
+   margin-left: 25%;
    top: 18px;
    align-items: center;
    background: #191B1F;
