--- a/src/components/LogoutButton/LogoutButton.module.css
+++ b/src/components/LogoutButton/LogoutButton.module.css
@@ -7,12 +7,10 @@
 }
 
 .logout {   
-    width: 300px;
-    height: 40px;
-    margin-left: 20%;
-    top: 30px;
+    width: 500px;
+    margin-right: 10px;
+    margin-top: 20px;
     display: flex;
-    flex-direction: column;
 }
 
 .logo {
