--- a/src/components/ShareDataBox/ShareDataBox.module.css
+++ b/src/components/ShareDataBox/ShareDataBox.module.css
@@ -58,7 +58,7 @@
 }
 
 .secondline {
-    height: 90px;
+    height: 100px;
 }
 
 .secondtext {
@@ -66,14 +66,13 @@
 }
 
 .personnumber {
-    display: flex;
+    margin-top: 40px;
     font-family: Open Sans;
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
     /* or 125% */
-    margin-top: 40px;
-    margin-left: 25%;
+    text-align: center;
 
     color: #FFFFFF;
 }
@@ -88,14 +87,11 @@
 }
 
 .employmentstatus {
-    display: flex;
     font-family: Open Sans;
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
-
-    /* or 125% */
-    margin-left: 27%;
+    text-align: center;
 
     color: #FFFFFF;
 }
@@ -203,3 +199,24 @@
 
     color: #1A1A1A;
 }
+
+.firstItem {
+    width: 30%;
+    display: flex;
+}
+
+.secondItem {
+    margin-left: 15%;
+    width: 5%;
+}
+
+.thirdItem {
+    margin-left: 5%;
+    width: 18%;
+}
+
+.fourthItem {
+    margin-left: 2%;
+    width: 20%;
+}
+
