--- a/src/components/GetDataBox/GetDataBox.module.css
+++ b/src/components/GetDataBox/GetDataBox.module.css
@@ -141,7 +141,13 @@
     margin-top: 36px;
     height: 18px;
     width: 18px;
-    color: chartreuse;
+    border-color: #FFFFFF;
+    background-color: transparent;
+}
+
+.checkbox input:checked {
+    border-color: red;
+    background-color:red;
 }
 
 .consentedtext {
@@ -166,6 +172,14 @@
     border: 1px solid #454545;
     box-sizing: border-box;
     border-radius: 24px;
+}
+
+.button2:hover {
+    background-color: blue;
+}
+
+.button1:hover {
+    background-color: blue;
 }
 
 .button1 {
