--- a/src/components/LoginImage/LoginImage.module.css
+++ b/src/components/LoginImage/LoginImage.module.css
@@ -1,3 +1,4 @@
+@media screen and (min-width: 1245px) {
 .left {
     background-image: url("/public/images/login-page.png");
     background-repeat: no-repeat;
@@ -49,3 +50,15 @@
 
     color: #FFFFFF;
 }
+
+.paragraph{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 550;
+    font-size: 15px;
+    line-height: 2px;
+    text-align: center;
+margin-top: 2.8 rem;
+    color: #FFFFFF;
+    }
+ }
