--- a/src/components/VerifyEmailBox/VerifyEmailBox.module.css
+++ b/src/components/VerifyEmailBox/VerifyEmailBox.module.css
@@ -41,6 +41,18 @@
     color: #FFFFFF;
     margin-bottom: 20px;
 }
+.text4 {
+    width: min(80%, 406px);
+    margin-left: 20%;
+    margin-top: 20px;
+    overflow-wrap: break-word;font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    text-align: center;
+    color: #FFFFFF;
+    margin-bottom: 20px;
+}
 
 .text2 {
     margin-top: 10px;
@@ -58,18 +70,22 @@
     color: #757575;
 }
 .text3 {
-margin-bottom: 100px;
-    width: 462px;
+
+    margin-top: 10px;
+    overflow-wrap: break-word;
     height: 20px;
-    text-align: center;
+    margin-left: 28%;
     font-family: Open Sans;
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
     line-height: 20px;
+    margin-bottom: 20px;
     /* identical to box height, or 125% */
 
     color: #757575;
+
+
 }
 
 
@@ -107,9 +123,9 @@ margin-bottom: 100px;
     font-weight: 400;
     font-size: 16px;
     line-height: 40px;
-    margin-left: 15%;
+    margin-left: 24%;
     justify-content: center;
-    width: 56%;
+    width: 46%;
     /* identical to box height, or 250% */
     text-align: center;
     border: 2px solid #595959;
