--- a/src/components/VerifyEmailBox/VerifyEmailBox.module.css
+++ b/src/components/VerifyEmailBox/VerifyEmailBox.module.css
@@ -136,3 +136,24 @@ border-radius: 10px;
     
     color: #595959;
 }
+
+
+.emailIcon{
+color: white;
+align-items: center;
+justify-content: center;
+margin-top: 5%;
+margin-right: 12%;
+}
+
+.inputField{
+    border: none;
+    margin-left: 15%;
+    color: white;
+    background: #2C2C2C ;
+    padding: 20px 10px;
+    height: 10px;
+    width: 50%;
+    justify-content: center;
+    align-items: center;
+}
