--- a/src/components/RequestItem/RequestItem.module.css
+++ b/src/components/RequestItem/RequestItem.module.css
@@ -139,3 +139,67 @@
     margin-left: 8px;
     content: url("/public/images/arrow-right.png");
 }
+
+
+@media screen and (max-width: 1045px) {
+.transfer1 {
+    flex-direction: column;
+    width: 80%;
+    margin-top: 35%;
+    margin-left: 5%;
+    height: 80px;
+    text-align: center;
+    align-items: center;
+    background: #2D43A5;
+    border-radius: 48px;
+    border: none;
+
+    border-radius: 48px;
+}
+.arrow {
+    height: 14px;
+    width: 18px;
+    margin-top: 59px;
+    content: url("/public/images/arrow-right.png");
+    margin-bottom: 24px;
+
+}
+.name {
+    margin-top: 12px;
+    margin-right: 4%;
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+    /* identical to box height */
+
+    color: #FFFFFF;
+}
+.date {
+    margin-top: 12px;
+    margin-right: 15%;
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22px;
+    /* identical to box height */
+
+    color: #FFFFFF;
+}
+.sourcename {
+    margin-top: 12px;
+    margin-left: 15%;
+    margin-right: 20px;
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+    /* identical to box height */
+
+    color: #FFFFFF;
+}
+}    
+
