--- a/src/components/RequestsBox/RequestsBox.module.css
+++ b/src/components/RequestsBox/RequestsBox.module.css
@@ -12,3 +12,13 @@
     width: 60%;
     height: 680px;
 }
+
+@media screen and ( max-width: 1045) {
+   .box {
+    margin-top: 300px;
+    margin-left: 22%;
+    width: max(40%, 300px);
+    height: 680px;
+} 
+    
+}
