--- a/src/pages/MainPage/MainPage.module.css
+++ b/src/pages/MainPage/MainPage.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     flex: 1;
+    flex-grow: 1;
     height: 1000px;
     background: #222429;
 }
@@ -69,4 +70,17 @@
     text-align: center;
 
     color: #FFFFFF;
+}
+
+@media screend and (max-width: 1045px){
+
+.main {
+    width: max(30%, 200px);
+    flex-direction: column;
+    margin-left: 45%;
+    flex: 1;
+    flex-grow: 1;
+    height: 1000px;
+    background: blue;
+}
 }
