--- a/src/pages/DirectLoginPage/DirectLoginPage.module.css
+++ b/src/pages/DirectLoginPage/DirectLoginPage.module.css
@@ -4,8 +4,15 @@
     border-radius: 8px;
     overflow: hidden;
     width: 100%;
-    margin-top: 8px;
     font-size: 24px;
+}
+
+.left {
+    width: 50%;
+}
+
+.right {
+    width: 50%;
 }
 
 
