--- a/src/components/loginImage/index.module.css
+++ b/src/components/loginImage/index.module.css
@@ -3,7 +3,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 1000px;
+height: 100%;
     flex: 1;
 }
 
