--- a/src/components/tabs/index.module.css
+++ b/src/components/tabs/index.module.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
 
 .tabbar1 {
   display: inline;
@@ -9,36 +9,29 @@
 }
 
 .tab {
-   position: absolute;
-   width: 373px;
-   height: 48px;
-   top: 18px;
-   align-items: center;
-   background: #191B1F;
-   border-radius: 24px;
-  }
-
-  /* Style the buttons inside the tab */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 24px;
+}
 .button1 {
-  width: 122px;
   height: 44px;
   border: none;
   margin-top: 2px;
   margin-left: 2px;
   justify-content: center;
   border-radius: 24px;
-  background: #31343C;
+  background: #31343c;
 }
 
 .button2 {
-  width: 122px;
   height: 44px;
   border: none;
   margin-top: 2px;
   margin-left: 2px;
   justify-content: center;
   border-radius: 24px;
-  background: #191B1F;;
+  background: #191b1f;
 }
 
 .tab .button1:hover {
@@ -50,14 +43,12 @@
 }
 
 .buttontext1 {
-    font-family: Open Sans;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-/* identical to box height, or 200% */
-
-     text-align: center;
-     color: #FFFFFF;
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  text-align: center;
+  color: #ffffff;
 }
 
 .buttontext2 {
@@ -65,8 +56,6 @@
   font-style: normal;
   font-weight: 600;
   font-size: 20px;
-/* identical to box height, or 200% */
-
-   text-align: center;
-   color: #757575;
+  text-align: center;
+  color: #757575;
 }
