--- a/src/components/requestBox/index.module.css
+++ b/src/components/requestBox/index.module.css
@@ -1,8 +1,8 @@
-.tagsContent1 {
+.requestBoxDisplay {
     display: inline;
 }
 
-.tagsContent2 {
+.requestBoxDisappear {
     display: none;
 }
 
@@ -11,6 +11,17 @@
     margin-left: 20%;
     width: 60%;
     height: 680px;
+}
+
+.list {
+    margin: 20px;
+  }
+  
+.item {
+    border-radius: 25px;
+    background-color: white;
+    padding: 10px;
+    margin-top: 20px;
 }
 
 @media screen and ( max-width: 1045) {
