--- a/src/pages/redirect/index.module.css
+++ b/src/pages/redirect/index.module.css
@@ -21,13 +21,12 @@
     display: inline;
     width: 40%;
     min-width: 480px;
-    height: 70%;
+    /* height: 70%; */
     min-width: 580px;
 }
 
 .footer{
     width: 60%;
-    color:  #FFFFFF;
 }
 
 .logo {
@@ -95,6 +94,8 @@
 
 .text5 {
     text-align: center;   
+    margin-top: 20%;
+    color: #808080;
 }
 
 .shownothing {
