--- a/src/pages/LandingPage/index.module.css
+++ b/src/pages/LandingPage/index.module.css
@@ -34,6 +34,16 @@
     height: 120px;
  }
 
+ .text {
+    margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1;
+    flex-grow: 1;
+    height: 120px;
+ }
+
 .button {
     display: 'flex';
     align-items: 'center';
