--- a/src/components/header/logoutButton/index.module.css
+++ b/src/components/header/logoutButton/index.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 .logoutavailable1 {
     display: none;
 }
@@ -77,7 +79,6 @@
 }
 
 .logoutItem {   
-
     /* width: 300px; */
     margin-right: 150px;
     margin-top: 20px;
@@ -92,17 +93,13 @@
 
 .items {   
     display: flex;
-}
-
-.logocontainer {
-    width: 180px;
-    margin-top: 20px;
-    display: flex;
+    width: 120px;
 }
 
 .logotext {
-    margin-top: 2px;
-    margin-left: 5px;
+    margin-top: 4px;
+    margin-left: 8px;
+    width: 120px;
     font-family: Open Sans;
     color: white;
     font-weight: 600;
