--- a/src/pages/RequestPage/index.module.css
+++ b/src/pages/RequestPage/index.module.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+  flex-grow: 1;
+  width: 100%;
+  height: 1000px;
+  background: #222429;
+}
+
 .RequestPage {
   background-color: lightblue;
 }
