update: flow box

--- a/src/components/flowBox/index.module.css
+++ b/src/components/flowBox/index.module.css
@@ -15,7 +15,17 @@
 }
 
 .lines .projectOak {
-    margin-top: 22px;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1;
+    flex-grow: 1;
+    height: 20px;
+}
+
+.lines .space {
+    margin-top: 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
