--- a/src/pages/RequestPage/index.module.css
+++ b/src/pages/RequestPage/index.module.css
@@ -39,3 +39,13 @@
   flex-grow: 1;
   height: 120px;
 }
+
+.consentBox {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+  flex-grow: 1;
+  height: 110px;
+}
