--- a/src/pages/RequestPage/index.module.css
+++ b/src/pages/RequestPage/index.module.css
@@ -16,7 +16,6 @@
 }
 
 .body {
-  background-color: palevioletred;
   margin-top: 50px;
   display: inline;
   width: 40%;
@@ -31,7 +30,7 @@
 
 
 .flowBox {
-  margin-top: 30px;
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -41,11 +40,62 @@
 }
 
 .consentBox {
-  margin-top: 50px;
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   flex: 1;
   flex-grow: 1;
   height: 110px;
+}
+
+.title {
+  margin-top: 50px;
+  height: 50px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+  flex-grow: 1;
+  height: 40px;
+}
+
+.step {
+  margin-top: 40px;
+  height: 10px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+  flex-grow: 1;
+  height: 40px;
+}
+
+.word1 {
+  display: flex;
+  flex-direction: row;
+  font-style: normal;
+  font-size: 18px;
+  font-weight: 600;
+  color: #FFFFFF;
+}
+
+.word2 {
+  margin-left: 4px;
+}
+
+.word3 {
+  margin-left: 5px;
+  color: #5CBC64;
+}
+
+.word4 {
+  display: flex;
+  flex-direction: row;
+  font-style: normal;
+  font-size: 22px;
+  font-weight: 600;
+  color: #FFFFFF;
 }
