--- a/src/components/requestItem/index.module.css
+++ b/src/components/requestItem/index.module.css
@@ -1,20 +1,15 @@
-.requestBox1 {
+.requestBox {
     display: flex;
-    width: 70%;
     margin-top: 10px;
-    margin-left: 15%;
+    width: 100%;
     height: 60px;
     background: #191B1F;
     border-radius: 48px;
     border: none;
 }
 
-.requestBox1:hover {
+.requestBox:hover {
     background-color: blue;
-}
-
-.requestBox2 {
-    display: none;
 }
 
 .logo {
@@ -27,7 +22,7 @@
 
 .name {
     margin-top: 16px;
-    margin-left: 5%;
+    margin-left: 10px;
     font-family: Open Sans;
     font-style: normal;
     font-weight: 600;
