--- a/src/components/popups/index.module.css
+++ b/src/components/popups/index.module.css
@@ -1,4 +1,4 @@
-.main1 {
+.main {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
@@ -8,84 +8,80 @@
     z-index: 2;
   }
   
-  .shownothting {
-    display: none;
-  }
+.box {
+  width: 30%;
+  height: 724px;
+  margin-top: 120px;
+  margin-left: 35%;
+  background: #2c2c2c;
+  border-radius: 24px;
+}
+
+.certificate {
+  width: 40px;
+  height: 40px;
+  margin-top: 20%;
+  content: url("/public/images/check-circle.png");
+}
+
+.text {
+  /* margin-top: 10%; */
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  text-align: center;
+  color: #ffffff;
+}
   
-  .box {
-    width: 30%;
-    height: 724px;
-    margin-top: 120px;
-    margin-left: 35%;
-    background: #2c2c2c;
-    border-radius: 24px;
-  }
-  
-  .certificate {
-    width: 40px;
-    height: 40px;
-    margin-top: 20%;
-    content: url("/public/images/check-circle.png");
-  }
-  
-  .text {
-    /* margin-top: 10%; */
-    font-family: Open Sans;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    text-align: center;
-    color: #ffffff;
-  }
-  
-  .text2 {
-    padding-left: 5%;
-    margin-top: 10px;
-    width: 85%;
-    height: 70%;
-    text-align: center;
-    font-family: Open Sans;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 20px;
-    color: #757575;
-  }
-  
-  .button {
-    width: 60%;
-    height: 60%;
-    margin-top: 10px;
-    margin-bottom: 40px;
-  
-    background: #5cbc64;
-    border-radius: 24px;
-    border: none;
-  }
-  
-  .button:hover {
-    background-color: blue;
-  }
-  
-  .buttontext {
-    width: 100%;
-    font-family: Open Sans;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 16px;
-    text-align: center;
-    color: #1a1a1a;
-  }
-  
-  
-  .center{
-   display: flex;
-   justify-content: center;
-   text-align: center;
-  }
-  
-  #danger {
-    font-size: 35px;
-    color: #FFFF00;
-  }
+.text2 {
+  padding-left: 5%;
+  margin-top: 10px;
+  width: 85%;
+  height: 70%;
+  text-align: center;
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+  color: #757575;
+}
+
+.button {
+  width: 60%;
+  height: 60%;
+  margin-top: 10px;
+  margin-bottom: 40px;
+
+  background: #5cbc64;
+  border-radius: 24px;
+  border: none;
+}
+
+.button:hover {
+  background-color: blue;
+}
+
+.buttontext {
+  width: 100%;
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  text-align: center;
+  color: #1a1a1a;
+}
+
+
+.center{
+display: flex;
+justify-content: center;
+text-align: center;
+}
+
+#danger {
+  font-size: 35px;
+  color: #FFFF00;
+}
 
