--- a/src/components/popups/button/index.module.css
+++ b/src/components/popups/button/index.module.css
@@ -1,5 +1,5 @@
 .buttongreen {
-    width: 140px;
+    width: 220px;
     height: 70%;
     margin-top: 10px;
     margin-bottom: 40px;
@@ -23,13 +23,14 @@
 }
 
 .buttondisable {
-    width: 140px;
+    width: 220px;
     height: 70%;
     margin-top: 10px;
     margin-bottom: 40px;
-    background: #5cbc64;
+    background: transparent;
+    border: 1px solid #ACACAC;
+    box-sizing: border-box;
     border-radius: 24px;
-    border: none;
 }
   
 .button:hover {
@@ -43,5 +44,5 @@
   font-weight: 600;
   font-size: 18px;
   text-align: center;
-  color: #1a1a1a;
+  color: #ACACAC;
 }
