--- a/src/components/popups/index.module.css
+++ b/src/components/popups/index.module.css
@@ -11,9 +11,9 @@
 .box {
   width: 30%;
   height: 724px;
-  margin-top: 120px;
+  margin-top: 60px;
   margin-left: 35%;
-  background: #2c2c2c;
+  background: #000000;
   border-radius: 24px;
 }
 
