fix: impl exitrow

--- a/src/components/popups/button/index.module.css
+++ b/src/components/popups/button/index.module.css
@@ -46,3 +46,15 @@
   text-align: center;
   color: #ACACAC;
 }
+
+
+
+.button2{
+  background-color: transparent;
+  border: none;
+}
+#exit{
+  color: gray;
+  font-size: 20px;
+}
+
