--- a/src/components/loginImage/index.module.css
+++ b/src/components/loginImage/index.module.css
@@ -3,8 +3,10 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-height: 100%;
+    height: 100%;
     flex: 1;
+    padding-left: 4vw;
+    padding-right: 4vw;
 }
 
 .leaf {
