--- a/src/components/popups/body/card/index.module.css
+++ b/src/components/popups/body/card/index.module.css
@@ -173,6 +173,59 @@
   margin: 0px;
   padding: 0px;
 }
+
+.fetchColumn {
+  display: inline;
+}
+
+.fecthText {
+  margin-bottom: 20px;
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 27px;
+  text-align: center;
+
+  color: #FFFFFF;
+}
+
+.ldsring {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.ldsring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid rgb(255, 255, 255);
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #65D36E transparent transparent transparent;
+}
+.ldsring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.ldsring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.ldsring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
   
 @media screen and (max-width: 768px) {
   .scroll {
@@ -203,3 +256,61 @@
     overflow-y: hidden;
   }
 }
+
+.form {
+  display: flex;
+  flex-direction: row;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 40px;
+  /* margin-left: 24%; */
+  width: 50%;
+  text-align: center;
+  justify-content: center;
+  border: 2px solid #595959;
+  border-radius: 10px;
+  color: #595959;
+  /* text-align: center; */
+}
+
+.emailIcon {
+  color: white;
+  align-items: center;
+  justify-content: center;
+  margin-top: 13px;
+
+  /* margin-right: 12%; */
+}
+
+.inputField {
+  border: none;
+  color: white;
+  background-color: transparent;
+  padding: 20px 10px;
+  height: 10px;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width: 635px) {
+  .form {
+    display: flex;
+    flex-direction: column;
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 40px;
+    /* margin-left: 24%; */
+    width: 70%;
+    text-align: center;
+    justify-content: center;
+    border: 2px solid #595959;
+    border-radius: 10px;
+    color: #595959;
+    text-align: center;
+  }
+}
+
