--- a/src/components/ui/Button/index.module.css
+++ b/src/components/ui/Button/index.module.css
@@ -1,24 +1,19 @@
 .line {
   width: 100%;
-  height: 60px;
   display: flex;
   flex-direction: row;
   align-items: 'center';
 }
 
 .button {
-  margin-top: 50px;
-  margin-left: 30%;
-  width: 40%;
-  height: 52px;
   display: flex;
+  flex-grow: 1;
   justify-content: center;
-  display: table-cell;
   vertical-align: middle;
-  background: #65d36e;
+  background-color: #65d36e;
   border-radius: 48px;
   border: none;
-
+  padding: 16px 24px;
 }
 
 .button .buttonText {
