fix: using the new popup for both fetching and sharing

--- a/src/components/popups/body/card/index.module.css
+++ b/src/components/popups/body/card/index.module.css
@@ -175,7 +175,10 @@
 }
 
 .fetchColumn {
-  display: inline;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .fecthText {
