--- a/src/components/popup/pages/FetchComplete.module.css
+++ b/src/components/popup/pages/FetchComplete.module.css
@@ -3,3 +3,18 @@
   flex-direction: column;
   flex: 1;
 }
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.logoSuccess {
+  margin-right: 10px;
+  width: 40px;
+  height: 40px;
+  content: url("/public/images/check-circle.png");
+}
