--- a/src/components/ui/Button/index.module.css
+++ b/src/components/ui/Button/index.module.css
@@ -14,14 +14,40 @@
   border-radius: 48px;
   border: none;
   padding: 16px 24px;
-}
-
-.button .buttonText {
   font-family: Open Sans;
   font-style: normal;
   font-weight: 600;
   font-size: 20px;
-  /* identical to box height, or 200% */
+}
 
-  color: #000;
+.primary {
+  background-color: #65d36e;
+  color: black;
+}
+
+.secondary {
+  background-color: black;
+  color: green;
+  box-shadow:0px 0px 0px 2px green inset;
+}
+
+.button:disabled {
+  background-color: gray;
+}
+
+.button:hover.primary {
+  background-color: #84eb8d;
+}
+
+.button:hover.secondary {
+  box-shadow:0px 0px 0px 2px #88d68e inset;
+  color: #88d68e;
+}
+
+.button:active.primary {
+  background-color: #2e7033;
+}
+
+.button:active.secondary {
+  background-color: #142515;
 }
