fix: remove HomePage from LandingPage

--- a/src/pages/auth/index.module.css
+++ b/src/pages/auth/index.module.css
@@ -33,3 +33,10 @@
     background-color: #222429;
     height: 100%;
   }
+  
+.loginpage {
+    width: 80%;
+    display: inline;
+    text-align: center;
+  }
+  
