--- a/src/pages/HomePage/index.module.css
+++ b/src/pages/HomePage/index.module.css
@@ -5,7 +5,7 @@
   flex: 1;
   flex-grow: 1;
   width: 100%;
-  height: 1000px;
+  height: 100%;
   background: #222429;
 }
 
@@ -22,24 +22,6 @@
   align-content: center;
 }
 
-.login {
-  font-size: 38px;
-  text-align: center;
-  font-family: Open Sans;
-  font-style: normal;
-  font-weight: 800;
-  text-align: center;
-  color: #FFFFFF;
-}
-
-.firstline {
-  margin-top: 400px;
-}
-
-.thirdline {
-  height: 50px;
-  margin-top: 50px;
-}
 
 .loginpage {
   width: 80%;
