update backgroud color

--- a/src/pages/AuthPage/index.module.css
+++ b/src/pages/AuthPage/index.module.css
@@ -46,7 +46,7 @@
 
 
 body {
-  background: url("/public/images/login-page.png") no-repeat cover cover fixed;
+  background: url("/public/images/login-page.png") no-repeat fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
