--- a/src/pages/HomePage/index.module.css
+++ b/src/pages/HomePage/index.module.css
@@ -5,7 +5,7 @@
   flex: 1;
   flex-grow: 1;
   width: 100%;
-  height: 100%;
+  height: 2000px;
   background: #222429;
 }
 
@@ -27,4 +27,8 @@
   width: 80%;
   display: inline;
   text-align: center;
+}
+
+body {
+  background-color: #222429;
 }
