--- a/src/pages/LandingPage/index.module.css
+++ b/src/pages/LandingPage/index.module.css
@@ -5,7 +5,7 @@
     flex: 1;
     flex-grow: 1;
     width: 100%;
-    height: 1000px;
+    height: 2000px;
     background: #222429;
   }
 
@@ -120,9 +120,5 @@
 }
 
 body {
-    background: url("/public/images/login-page.png") no-repeat fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: 50% 100%;
+    background-color: #222429;
 }
