--- a/src/pages/LandingPage/index.module.css
+++ b/src/pages/LandingPage/index.module.css
@@ -22,6 +22,11 @@
     align-content: center;
 }
 
+.logo {
+    position: absolute;
+    left: 20px;
+    top: 20px;
+}
 
 .flowBox {
     margin-top: 30px;
