--- a/src/components/requestItem/index.module.css
+++ b/src/components/requestItem/index.module.css
@@ -21,12 +21,13 @@
 }
 
 .name {
-    margin-top: 16px;
-    margin-left: 10px;
+    margin-top: 18px;
+    padding-left: 2px;
+    width: 18%;
     font-family: Open Sans;
     font-style: normal;
     font-weight: 600;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 22px;
     /* identical to box height */
 
@@ -34,12 +35,13 @@
 }
 
 .brief {
-    margin-top: 12px;
-    margin-left: 15%;
+    margin-top: 18px;
+    padding-left: 6px;
+    width: 56%;
     font-family: Open Sans;
     font-style: normal;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 13px;
     line-height: 22px;
     /* identical to box height */
 
@@ -49,11 +51,12 @@
 
 .date {
     margin-top: 16px;
-    margin-left: 15%;
+    padding-left: 2px;
+    width: 10%;
     font-family: Open Sans;
     font-style: normal;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 22px;
     /* identical to box height */
 
