fix: renamed the 'consentBox' component to 'ProcessDocument'

--- a/src/pages/RequestPage/index.module.css
+++ b/src/pages/RequestPage/index.module.css
@@ -39,7 +39,7 @@
   height: 120px;
 }
 
-.consentBox {
+.processDocumentContainer {
   margin-top: 20px;
   display: flex;
   flex-direction: column;
